Wrapping of the pagination prevented

--- a/wcfsetup/install/files/style/ui/pagination.scss
+++ b/wcfsetup/install/files/style/ui/pagination.scss
@@ -1,11 +1,13 @@
 .pagination {
+	overflow: auto;
+
 	@include screen-xs {
 		text-align: center;
 	}
 
 	> ul {
 		display: inline-flex;
-		flex-wrap: wrap;
+		flex-wrap: nowrap;
 
 		> li {
 			display: flex;
